--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,12 @@
 <!-- <app-demo></app-demo> -->
-<app-todolist></app-todolist>
+<!-- <app-todolist></app-todolist> -->
+
+<p appHighlight [color]="'blue'">i am a demo text</p>
+
+<p appHighlight>i am a demo text</p>
+
+<p appDemoelemet>Demo for elemetn ref</p>
+
+<h1 appDemoelemet>Demo for elemetn ref</h1>
+
+<app-productlist></app-productlist>
