--- a/src/app/todolist/todolist.component.html
+++ b/src/app/todolist/todolist.component.html
@@ -4,13 +4,13 @@
   <div *ngIf="flag" class="row">
     <h2>Add Todos</h2>
     <div class="form-group">
-      <input placeholder="Enter Id" [(ngModel)]="Id" class="form-control">
+      <input placeholder="Enter Id" [(ngModel)]="obj.Id" class="form-control">
     </div>
     <div class="form-group">
-      <input placeholder="Enter Title" [(ngModel)]="Title" class="form-control">
+      <input placeholder="Enter Title" [(ngModel)]="obj.Title" class="form-control">
     </div>
     <div class="form-group">
-      <select [(ngModel)]="Status" class="form-control">
+      <select [(ngModel)]="obj.Status" class="form-control">
         <option *ngFor="let item of statusarr">{{item}}</option>
       </select>
     </div>
