--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!-- <app-demo></app-demo> -->
 <!-- <app-todolist></app-todolist> -->
 
-<p appHighlight [color]="'blue'">i am a demo text</p>
+<!-- <p appHighlight [color]="'blue'">i am a demo text</p>
 
 <p appHighlight>i am a demo text</p>
 
@@ -9,4 +9,8 @@
 
 <h1 appDemoelemet>Demo for elemetn ref</h1>
 
-<app-productlist></app-productlist>
+<input appCredticard> -->
+
+<!-- <app-productlist></app-productlist> -->
+
+<app-demo></app-demo>
