--- a/src/app/demo/demo.component.html
+++ b/src/app/demo/demo.component.html
@@ -1,3 +1,9 @@
+<h1>{{str | titlecase }}</h1>
+<h1>{{no1 |number:'2.2-2' }}</h1>
+<h1>{{no1 | currency:'INR':'symbol-narrow':'3.3-5' }}</h1>
+<h1>{{dt | date :'dd/MM/yy' }}</h1>
+
+<h1>{{object | json}}</h1>
 <h1>Add</h1>
 <input type="number" [(ngModel)]="no1">
 <input type="number" [(ngModel)]="no2">
