--- a/src/app/demo/demo.component.html
+++ b/src/app/demo/demo.component.html
@@ -1,22 +1,25 @@
-<h1>{{str | titlecase }}</h1>
-<h1>{{no1 |number:'2.2-2' }}</h1>
-<h1>{{no1 | currency:'INR':'symbol-narrow':'3.3-5' }}</h1>
-<h1>{{dt | date :'dd/MM/yy' }}</h1>
+<div class="container">
+  <p #id1>i am demo text</p>
+  <h1>{{str | titlecase }}</h1>
+  <h1>{{no1 |number:'2.2-2' }}</h1>
+  <h1>{{no1 | currency:'INR':'symbol-narrow':'3.3-5' }}</h1>
+  <h1>{{dt | date :'dd/MM/yy' }}</h1>
 
-<h1>{{object | json}}</h1>
-<h1>Add</h1>
-<input type="number" [(ngModel)]="no1">
-<input type="number" [(ngModel)]="no2">
-<button (click)="onAddClick()">Add</button>
-<h1>{{res}}</h1>
-<hr>
-<input type="number" #input1>
-<input type="number" #input2>
-<button (click)="onAdd1Click(input1.value,input2.value)">Add using template binding</button>
-<h1>{{ans}}</h1>
-<hr>
-<input [(ngModel)]="str">
-<h1>{{str}}</h1>
+  <h1>{{object | json}}</h1>
+  <h1>Add</h1>
+  <input type="number" [(ngModel)]="no1">
+  <input type="number" [(ngModel)]="no2">
+  <button (click)="onAddClick()">Add</button>
+  <h1>{{res}}</h1>
+  <hr>
+  <input type="number" #input1>
+  <input type="number" #input2>
+  <button (click)="onAdd1Click(input1.value,input2.value)">Add using template binding</button>
+  <h1>{{ans}}</h1>
+  <hr>
+  <input [(ngModel)]="str">
+  <h1>{{str}}</h1>
 
-<input (keyup)="0" #demoinput>
-{{demoinput.value}}
+  <input (keyup)="0" #demoinput>
+  {{demoinput.value}}
+</div>
