--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!-- <app-demo></app-demo> -->
-<!-- <app-todolist></app-todolist> -->
+<app-todolist></app-todolist>
 
 <!-- <p appHighlight [color]="'blue'">i am a demo text</p>
 
@@ -15,21 +15,22 @@
 
 <!-- <app-demo></app-demo> -->
 
-<div class="container">
-  <h1>App Component</h1>
-  <!-- <app-message>
+<!-- <div class="container">
+  <h1>App Component</h1> -->
+<!-- <app-demo></app-demo> -->
+<!-- <app-message>
     <h1>i am passed from app component</h1>
     <button class="btn">Click Me</button>
     <button class="btn1">Save Me</button>
     <p para>i am demo text</p>
   </app-message> -->
 
-  <!-- <app-message [str]="'hello'"></app-message> -->
+<!-- <app-message [str]="'hello'"></app-message> -->
 
-  <!-- <app-message *ngFor="let item of arr" [str]="item"></app-message> -->
+<!-- <app-message *ngFor="let item of arr" [str]="item"></app-message> -->
 
-  <app-messagewraper>
+<!-- <app-messagewraper>
     <app-message *ngFor="let item of arr" [str]="item"></app-message>
-  </app-messagewraper>
+  </app-messagewraper> -->
 
-</div>
+<!-- </div> -->
