--- a/src/app/todolist/todolist.component.html
+++ b/src/app/todolist/todolist.component.html
@@ -4,13 +4,13 @@
   <div *ngIf="flag" class="row">
     <h2>Add Todos</h2>
     <div class="form-group">
-      <input placeholder="Enter Id" [(ngModel)]="obj.Id" class="form-control">
+      <input placeholder="Enter Id" [(ngModel)]="Id" class="form-control">
     </div>
     <div class="form-group">
-      <input placeholder="Enter Title" [(ngModel)]="obj.Title" class="form-control">
+      <input placeholder="Enter Title" [(ngModel)]="Title" class="form-control">
     </div>
     <div class="form-group">
-      <select [(ngModel)]="obj.Status" class="form-control">
+      <select [(ngModel)]="Status" class="form-control">
         <option *ngFor="let item of statusarr">{{item}}</option>
       </select>
     </div>
@@ -19,6 +19,8 @@
   </div>
   <div class="row">
     <button class="btn btn-primary" (click)="onAddTodoClick()">Add New ToDo</button>
+
+    <input class="form-control" #input1 (keyup)="0">
     <table class="table">
       <thead>
         <th>
@@ -35,7 +37,8 @@
         </th>
       </thead>
       <tbody>
-        <tr *ngFor="let item of todos;let i=index">
+        <!-- | filter :input1.value  -->
+        <tr *ngFor="let item of todos  ">
           <td>{{item.Id}}</td>
           <td>{{item.Title}}</td>
           <td> <span [ngClass]="{donestatus: item.Status==='done',pendingstatus:item.Status==='pending'}">
