--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!-- <app-demo></app-demo> -->
-<app-todolist></app-todolist>
+<!-- <app-todolist></app-todolist> -->
 
 <!-- <p appHighlight [color]="'blue'">i am a demo text</p>
 
@@ -34,3 +34,6 @@
   </app-messagewraper> -->
 
 <!-- </div> -->
+<app-header></app-header>
+<router-outlet></router-outlet>
+<!-- <app-footer></app-footer> -->
