--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -21,6 +21,8 @@
         <li routerLinkActive="active"><a routerLink="/addtodo">Add Todo</a></li>
         <li routerLinkActive="active"><a routerLink="/demo">Demo</a></li>
         <li routerLinkActive="active"><a routerLink="/products">Product</a></li>
+        <li routerLinkActive="active"><a routerLink="/addproduct">Add Product</a></li>
+        <li routerLinkActive="active"><a routerLink="/usersignup">SignUp</a></li>
       </ul>
 
 
