--- a/src/app/productlist/addproduct/addproduct.component.html
+++ b/src/app/productlist/addproduct/addproduct.component.html
@@ -1,4 +1,40 @@
-<p>addproduct works!</p>
-<input [(ngModel)]="pid">
-<input [(ngModel)]="pname">
-<button (click)="onAddProduct()">Add product</button>
+<div class="container">
+
+  <form (ngSubmit)="onProductAdd(f)" #f="ngForm">
+    <div class="form-group">
+      <label>Product ID</label>
+      <input name="pro_id" required ngModel #pro_id="ngModel" class="form-control" type="text"
+        placeholder="Enter Product Id">
+      <label class="alert alert-danger" *ngIf="pro_id.hasError('required') && !pro_id.pristine ">PRoduct Id is
+        Required</label>
+      <label class="alert alert-danger" *ngIf="pro_id.hasError('email') && !pro_id.pristine ">Email</label>
+    </div>
+    <div class="form-group">
+      <label>Product Name</label>
+      <input name="pro_name" ngModel #pro_name="ngModel" pattern="[a-zA-z]*" class="form-control" type="text"
+        placeholder="Enter Product Name">
+      <label class="alert alert-danger" *ngIf="pro_name.hasError('pattern') && !pro_name.pristine ">Only chars</label>
+    </div>
+    <div class="form-group">
+      <label>Product price</label>
+      <input name="pro_price" ngModel class="form-control" type="number" placeholder="Enter Product price">
+    </div>
+    <div class="form-group">
+      <label>Product desc</label>
+      <input name="pro_desc" ngModel class="form-control" type="text" placeholder="Enter Product desc ">
+    </div>
+    <div class="form-group">
+      <label>Product qty</label>
+      <input name="pro_qty" ngModel class="form-control" type="number" placeholder="Enter Product qty">
+    </div>
+    <div class="form-group">
+      <label>Product mfg</label>
+      <input name="pro_mfg" ngModel class="form-control" type="text" placeholder="Enter Product mfg">
+    </div>
+    <div class="form-group">
+      <label>Product img</label>
+      <input name="pro_img" ngModel class="form-control" type="text" placeholder="Enter Product img path">
+    </div>
+    <button type="submit" [disabled]="!f.valid" class="form-control btn btn-primary">Add Product</button>
+  </form>
+</div>
