--- a/src/app/productlist/productlist.component.html
+++ b/src/app/productlist/productlist.component.html
@@ -1,24 +1,25 @@
-<!-- <app-addproduct></app-addproduct> -->
-
-
-<!-- <h1>I am data from another service {{str}}</h1> -->
-
-
+<h1>Product List</h1>
 <div class="container">
   <div class="row">
     <h1>productlist works!</h1>
   </div>
   <div class="col-md-3">
-    <app-addproduct> </app-addproduct>
     <app-sidebar [name]="cat_name" (myEvent)="onMyEvent($event)"></app-sidebar>
   </div>
   <div #id1 class="col-md-9">
     <h1>Content</h1>
-    <table class="table">
-      <tr *ngFor="let item of products">
-        <td>{{item.pid}}</td>
-        <td>{{item.pname}}</td>
-      </tr>
-    </table>
+    <div class="row">
+      <div *ngFor="let item of products" class="col-sm-6 col-md-4">
+        <div class="thumbnail">
+          <img src="{{item.pro_img}}" height="150px" width="150px" alt="...">
+          <div class="caption">
+            <h3>{{item.pro_name}}</h3>
+            <p>{{item.pro_price}}</p>
+            <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default"
+                role="button">Button</a></p>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
