--- a/src/app/productlist/productlist.component.html
+++ b/src/app/productlist/productlist.component.html
@@ -15,8 +15,8 @@
           <div class="caption">
             <h3>{{item.pro_name}}</h3>
             <p>{{item.pro_price}}</p>
-            <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default"
-                role="button">Button</a></p>
+            <p><a (click)="onEditProduct(item)" class="btn btn-primary" role="button">Edit</a> <a href="#"
+                class="btn btn-default" role="button">Button</a></p>
           </div>
         </div>
       </div>
