--- a/src/app/user-signup/user-signup.component.html
+++ b/src/app/user-signup/user-signup.component.html
@@ -25,7 +25,13 @@
         *ngIf="!user_signup.get('user_email').pristine && user_signup.get('user_email').hasError('required')  ">required</label>
       <label class="alert alert-danger"
         *ngIf="!user_signup.get('user_email').pristine && user_signup.get('user_email').hasError('email')  ">email</label>
-
+      <p style="color:blue"
+        *ngIf="(user_signup.get('user_email').status == 'PENDING' && !user_signup.get('user_email').pristine)">Checking…
+      </p>
+      <p style="color:green"
+        *ngIf="(user_signup.get('user_email').status == 'VALID' && !user_signup.get('user_email').pristine )">
+        Email is Available</p>
+      <p style="color:red" *ngIf="user_signup.get('user_email').hasError('emailInUse')">Email is already Taken</p>
     </div>
     <div class="form-group">
       <label>Enter User Phone</label>
