--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -16,12 +16,13 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li [routerLinkActiveOptions]="{exact:true}" routerLinkActive="active">
-          <a routerLink="">Todo <span class="sr-only">(current)</span></a>
+          <a routerLink="">Home <span class="sr-only">(current)</span></a>
         </li>
-        <li routerLinkActive="active"><a routerLink="/addtodo">Add Todo</a></li>
+        <li routerLinkActive="active"><a routerLink="/todo">Todo</a></li>
+        <li routerLinkActive="active"><a routerLink="/todo/addtodo">Add Todo</a></li>
         <li routerLinkActive="active"><a routerLink="/demo">Demo</a></li>
         <li routerLinkActive="active"><a routerLink="/products">Product</a></li>
-        <li routerLinkActive="active"><a routerLink="/addproduct">Add Product</a></li>
+        <li routerLinkActive="active"><a routerLink="/products/addproduct">Add Product</a></li>
         <li routerLinkActive="active"><a routerLink="/usersignup">SignUp</a></li>
       </ul>
 
