--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -25,6 +25,9 @@
         <li routerLinkActive="active"><a routerLink="/products">Product</a></li>
         <li routerLinkActive="active"><a routerLink="/products/addproduct">Add Product</a></li>
         <li routerLinkActive="active"><a routerLink="/usersignup">SignUp</a></li>
+        <li routerLinkActive="active"><a routerLink="/search">Search</a></li>
+        <li routerLinkActive="active"><a routerLink="/demotask">Demo Task</a></li>
+
         <li routerLinkActive="active" *ngIf="!checkLoggedIn"><a routerLink="/login">Login</a></li>
         <li routerLinkActive="active" *ngIf="checkLoggedIn"><a (click)="onLogOut()">Log Out</a></li>
       </ul>
