--- a/src/app/todolist/edittodo/edittodo.component.html
+++ b/src/app/todolist/edittodo/edittodo.component.html
@@ -18,3 +18,5 @@
     <button class="btn btn-primary" (click)="onEditTodoClick()">Edit ToDo</button>
   </div>
 </div>
+
+<button (click)="onClick()">Click Me</button>
